# Virtual-Assistant

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
deck/: CMakeLists.txt  deck.cpp  deck.h
files/decks/: examples.txt  test.txt
search/: CMakeLists.txt  history.txt  search.cpp  search.h
voice/: commands.py  scraping.py
